--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +19,7 @@
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.11",
     "nodemon": "^2.0.15"
   }
 }
