--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,6 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
     "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
     "nodemon": "^2.0.15"
   }
